[CCAP-766] Making createdAt and updatedAt handle being immutable at correct times (#684)